--- a/vsem_calibration_tests/vsem_emulation_tests.Rmd
+++ b/vsem_calibration_tests/vsem_emulation_tests.Rmd
@@ -92,18 +92,22 @@ output_vars <- c("NEE", "Cv", "Cs", "CR")
 N_outputs <- length(output_vars)
 ```
 
-```{r}
+```{r, echo = FALSE}
 #
 # GP Emulator Settings
 #
 
-# GP packages and kernel families to use
-gp_libs <- c("mlegp", "hetGP")
-gp_kernels <- c("Gaussian", "Gaussian")
+emulator_settings <- data.frame(gp_libs = c("mlegp", "mlegp", "hetGP", "hetGP"), 
+                                target = c("SSR", "log_SSR", "SSR", "log_SSR"), 
+                                kernel = "Gaussian")
+                                
 
-# Number of design points used to fit GP emulators
+design_alg <- "LHS"
 N_design_points <- 30 * N_pars
 
+print(paste0("Design algorithm: ", design_alg))
+print(paste0("Number of design points: ", N_design_points))
+print(emulator_settings)
 ```
 
 
@@ -173,13 +177,17 @@ print(paste0("Number parameters: ", N_pars))
 ```{r}
 
 # Latin Hypercube Sample
-X_design <- randomLHS(N_design_points, N_pars)
+N_test <- 10
+X_train_test <- LHS_train_test(N_design_points, N_test, N_pars, theta_prior_params, joint = TRUE, extrapolate = FALSE)
+X_train <- X_train_test$X_train
+X_test <- X_train_test$X_test
 ```
 
 ## Run Model and calculate L2 error
 ```{r}
 model_outputs_list <- lapply(X_design, function(theta) run_VSEM(theta, ref_pars, pars_cal_sel, PAR, output_vars))
 SSR <- calc_SSR(data_obs, model_outputs_list)
+# TODO: normalize design data y, X and think about cross validation strategy
 ```
 
 
