--- a/vsem_calibration_tests/vsem_emulation_tests.Rmd
+++ b/vsem_calibration_tests/vsem_emulation_tests.Rmd
@@ -199,8 +199,19 @@ gp_err_list <- calc_independent_gp_pred_errs(gp_pred_list, train_test_data$Y_tes
 ```{r}
 N_iter <- 1
 N_test_points <- 20
-emulator_test_results <- evaluate_GP_emulators(emulator_settings, N_iter, N_design_points, N_test_points, 
-                                               theta_prior_params, ref_pars, pars_cal_sel, data_obs, PAR, output_vars, joint = TRUE, extrapolate = FALSE)
+
+emulator_test_results <- evaluate_GP_emulators(emulator_settings = emulator_settings, 
+                                               N_iter = N_iter, 
+                                               N_design_points = N_design_points, 
+                                               N_test_points = N_test_points, 
+                                               theta_prior_params = theta_prior_params, 
+                                               ref_pars = ref_pars, 
+                                               pars_cal_sel = pars_cal_sel, 
+                                               data_obs = data_obs, 
+                                               PAR = PAR, 
+                                               output_vars = output_vars, 
+                                               joint = TRUE, 
+                                               extrapolate = FALSE)
 ```
 
 
